[fix] slick arrow z-index
- slick arrow가 contact 위로 올라오는 것 수정

--- a/css/index.scss
+++ b/css/index.scss
@@ -166,7 +166,7 @@ article.index-project{
         .slick-arrow{
 
             position: absolute;
-            z-index:10;
+            z-index:5;
             width:100px;
             height:100px;
             top:45%;
